@@ -7,6 +7,7 @@
     * New ProgFAQs CSS
     * New Ninestalgia CSS
     * Support for GameFAQs' new signature system
+    * Show QuickPost for mods in closed topics
 
 2010-10-06:
     * version 0.7.10
